--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
@@ -30,7 +29,10 @@
   },
   "devDependencies": {
     "@types/node": "^16.10.9",
+    "dotenv": "^10.0.0",
     "fastest-validator": "^1.12.0",
-    "typescript": "^4.4.4"
+    "octokit": "^1.7.1",
+    "typescript": "^4.4.4",
+    "yaml": "^1.10.2"
   }
 }
