--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.0",
+    "passport": "^0.5.2",
     "pg": "^8.7.1",
     "qs": "^6.10.1",
     "reflect-metadata": "^0.1.13",
