--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.9",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "fastest-validator": "^1.12.0",
     "lodash": "^4.17.21",
