--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
+    "cron": "node ./dist/cron/cron.js",
     "prestart": "npm run build",
     "start": "node .",
     "build:watch": "tsc -w",
