--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "adm-zip": "^0.5.9",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -38,6 +39,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "fastest-validator": "^1.12.0",
+    "fs": "0.0.2",
     "lodash": "^4.17.21",
     "node-cron": "^3.0.0",
     "octokit": "^1.7.1",
