--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "node-cron": "^3.0.0",
     "octokit": "^1.7.1",
     "typescript": "^4.4.4",
+    "ws-heartbeat": "^1.2.0",
     "yaml": "^1.10.2"
   }
 }
