--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.17.4",
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "ws-heartbeat": "^1.2.0",
   }
 }
