--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
 GITHUB_API_TOKEN=
 GITHUB_REPO_OWNER=airslateinc
-GITHUB_REPO=airslateinc
+GITHUB_REPO=airslate-microservices-infra
 GITHUB_REPO_BRANCH=custom-main
