--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "adm-zip": "^0.5.9",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
@@ -27,6 +29,8 @@
     "pg": "^8.7.1",
     "qs": "^6.10.1",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "typeorm": "^0.2.38",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5",
