--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,5 @@ GITHUB_API_TOKEN=
 GITHUB_REPO_OWNER=airslateinc
 GITHUB_REPO=airslate-microservices-infra
 GITHUB_REPO_BRANCH=custom-main
+GOOGLE_CLIENT_ID=
+TOKEN_KEY=mysecretkey
