--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,5 +2,5 @@ GITHUB_API_TOKEN=
 GITHUB_REPO_OWNER=airslateinc
 GITHUB_REPO=airslate-microservices-infra
 GITHUB_REPO_BRANCH=custom-main
-GOOGLE_CLIENT_ID=
+SECRET=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
 TOKEN_KEY=mysecretkey
