--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "google-auth-library": "^7.11.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "node-stream-zip": "^1.15.0",
     "nodejs-base64": "^2.0.0",
     "passport": "^0.5.2",
     "pg": "^8.7.1",
@@ -34,6 +35,7 @@
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "typeorm": "^0.2.38",
+    "unzipper": "^0.10.11",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5",
     "ws": "^8.4.0"
