--- a/api-service/package.json
+++ b/api-service/package.json
@@ -26,11 +26,18 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "adm-zip": "^0.5.9",
+    "assert": "^2.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "crypto": "^1.0.1",
+    "octokit": "^1.7.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
