--- a/api-service/package.json
+++ b/api-service/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.4.2",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
@@ -28,9 +29,11 @@
     "@nestjs/typeorm": "^8.0.3",
     "adm-zip": "^0.5.9",
     "assert": "^2.0.0",
+    "bull": "^4.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "crypto": "^1.0.1",
+    "lodash": "^4.17.21",
     "octokit": "^1.7.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -43,6 +46,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bull": "^3.15.7",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
