--- a/api-service/package.json
+++ b/api-service/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^8.0.3",
     "adm-zip": "^0.5.9",
     "assert": "^2.0.0",
@@ -34,6 +35,7 @@
     "class-validator": "^0.13.2",
     "crypto": "^1.0.1",
     "lodash": "^4.17.21",
+    "nodejs-base64": "^2.0.0",
     "octokit": "^1.7.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -47,6 +49,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bull": "^3.15.7",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
