--- a/api-service/package.json
+++ b/api-service/package.json
@@ -28,8 +28,11 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.2.5",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^8.2.5",
+    "@types/socket.io": "^3.0.2",
     "adm-zip": "^0.5.9",
     "assert": "^2.0.0",
     "bcrypt": "^5.0.1",
