--- a/api-service/package.json
+++ b/api-service/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.2.5",
     "@nestjs/schedule": "^1.0.2",
+    "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.3",
     "@nestjs/websockets": "^8.2.5",
     "@types/socket.io": "^3.0.2",
@@ -51,6 +52,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.41",
     "yaml": "^1.10.2"
   },
