--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.9",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "antd": "^4.17.4",
     "copy-to-clipboard": "^3.3.1",
     "dotenv": "^11.0.0",
     "react": "^17.0.2",
@@ -16,6 +21,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.1",
+    "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -44,11 +50,21 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^4.7.0",
-    "antd": "^4.17.4",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "axios": "^0.24.0",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "ws-heartbeat": "^1.2.0"
   },
   "react-dotenv": {
-    "whitelist": ["GOOGLE_CLIENT_ID"]
+    "whitelist": [
+      "GOOGLE_CLIENT_ID"
+    ]
   }
 }
