--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,12 @@ services:
   redis:
     image: redis:alpine
     restart: always
+    volumes:
+      - ./data/redis_data:/data
     networks:
       - test-network
     ports:
       - 6379:6379
-
   client:
     build:
       context: ./client
@@ -48,7 +49,8 @@ services:
     container_name: postgres
     image: postgres
     volumes:
-      - pgdata:/var/lib/postgresql/dat
+      - ./data/postgres-data:/var/lib/postgresql/data
+#      - pgdata:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=someuser
       - POSTGRES_PASSWORD=s0me-p4sswd
