--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,10 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.1",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "antd": "^4.17.4",
+    "axios": "^0.24.0",
+    "ws-heartbeat": "^1.2.0"
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
@@ -43,10 +46,6 @@
     ]
   },
   "devDependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "antd": "^4.17.4",
-    "axios": "^0.24.0",
-    "ws-heartbeat": "^1.2.0"
   },
   "react-dotenv": {
     "whitelist": [
