--- a/api-service/package.json
+++ b/api-service/package.json
@@ -44,12 +44,14 @@
     "crypto": "^1.0.1",
     "google-auth-library": "^7.11.0",
     "lodash": "^4.17.21",
+    "nest-winston": "^1.6.2",
     "nestjs-socket.io-client": "^1.0.6",
     "nodejs-base64": "^2.0.0",
     "octokit": "^1.7.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -57,6 +59,7 @@
     "socket.io-client": "^4.4.1",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.41",
+    "winston": "^3.4.0",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
