--- a/api-service/.env.example
+++ b/api-service/.env.example
@@ -3,12 +3,14 @@ DB_USERNAME=main
 DB_PASSWORD=
 DB_NAME=microinfra
 DB_PORT=5432
-
-GITHUB_API_TOKEN=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
+APP_PORT=8888
+APP_HOST=localhost
+GITHUB_API_TOKEN=
 GITHUB_REPO_OWNER=airslateinc
 GITHUB_REPO=airslate-microservices-infra
 GITHUB_REPO_BRANCH=custom-main
-GOOGLE_CLIENT_ID=732726255249-2e5imu8sql3r5qdlbmqsqgkfu0u4bpvh.apps.googleusercontent.com
-SECRET=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
+GOOGLE_CLIENT_ID=
+SECRET=
 JWT_TOKEN_KEY=mysecretkey
 TOKEN_EXPIRATION=30d
+WS_HOST=ws://localhost:8888
